--- a/index.html
+++ b/index.html
@@ -218,12 +218,20 @@
     <button onClick="loadCustomInventory()">Update inventory</button>
     <br/>
     <hr>
-    以下为广告，别点，点了我也不会赚钱的<br/>
+    以下为广告，别点，我是用来统计流量的
     <!-- /17828477/noogler_201307/noogler_yfchen -->
     <div id='div-gpt-ad-1433922605968-0' style='height:90px; width:728px;'>
-    <script type='text/javascript'>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1433922605968-0'); });
-    </script>
+      <script type='text/javascript'>
+      googletag.cmd.push(function() { googletag.display('div-gpt-ad-1433922605968-0'); });
+      </script>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- traffic tracking -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9395388490436466"
+         data-ad-slot="1321700838"
+         data-ad-format="auto"></ins>
+    <script>
   </body>
 </html>
