--- a/index.html
+++ b/index.html
@@ -225,13 +225,17 @@
       googletag.cmd.push(function() { googletag.display('div-gpt-ad-1433922605968-0'); });
       </script>
     </div>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- traffic tracking -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9395388490436466"
-         data-ad-slot="1321700838"
-         data-ad-format="auto"></ins>
-    <script>
+    <div>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- traffic tracking -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-9395388490436466"
+           data-ad-slot="1321700838"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
   </body>
 </html>
