--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150608<br/>
-      Update 20150610:<br/>
+      Update 20150611:<br/>
       <ul>
-        <li>每类服装标签上标明了拥有的数量</li>
+        <li>在jill酝酿下一次更新之前，手工改正了一些小错误</li>
+        <li>利用定制信息自动修正了部分衣服缺失的tag，但是不保证正确</li>
+        <li>预告下，关卡的tag已经测到第6章，筋疲力竭，完全被噁心坏了，请不要过于期待</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
@@ -218,6 +220,7 @@
     <button onClick="loadCustomInventory()">Update inventory</button>
     <br/>
     <hr>
+    <div id = 'log'></div>
     以下为广告，别点，我是用来统计流量的
     <!-- /17828477/noogler_201307/noogler_yfchen -->
     <div id='div-gpt-ad-1433922605968-0' style='height:90px; width:728px;'>
