--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150608<br/>
-      Update 20150611:<br/>
+      Update 20150613:<br/>
       <ul>
-        <li>在jill酝酿下一次更新之前，手工改正了一些小错误</li>
-        <li>利用定制信息自动修正了部分衣服缺失的tag，但是不保证正确</li>
-        <li>预告下，关卡的tag已经测到第6章，筋疲力竭，完全被噁心坏了，请不要过于期待</li>
+        <li>偷偷放入了除第六章支线以外所有测出有加分/罚分的tag，效果有待测试</li>
+        <li>jill的衣柜更新了！稍后会把更新加上</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
@@ -146,6 +145,7 @@
           <input type="radio" name="mode" value="filtering" onClick="changeMode(true)" checked/> 筛选
           <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" /> 计分
           <select id="theme" onChange="changeTheme()" style="display: none"></select>
+          <span id="tagInfo"></span>
         </div>
         <div class='facet'>
           <div>
