--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150608<br/>
+      服装数据来自jillhx@贴吧 20150613<br/>
       Update 20150613:<br/>
       <ul>
-        <li>偷偷放入了除第六章支线以外所有测出有加分/罚分的tag，效果有待测试</li>
-        <li>jill的衣柜更新了！稍后会把更新加上</li>
+        <li>偷偷放入了除第六章支线以外所有测出有加分/罚分的tag，效果有待测试（话说我是不是说过结婚期间不加功能的？hmmm）</li>
+        <li>已经更新到jillhx最新的衣柜数据，加入了黑白天鹅的全部部件，以及签到部件</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
