--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
       <ul>
         <li>偷偷放入了除第六章支线以外所有测出有加分/罚分的tag，效果有待测试（话说我是不是说过结婚期间不加功能的？hmmm）</li>
         <li>已经更新到jillhx最新的衣柜数据，加入了黑白天鹅的全部部件，以及签到部件</li>
+        <li>话说大家一定在拼命刷天鹅吧，估计短时间内不会有空去做任务了，这两天我应该不用急着修bug</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
