revert the F check

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150613<br/>
-      Update 20150613:<br/>
+      Update 20150615:<br/>
       <ul>
-        <li>偷偷放入了除第六章支线以外所有测出有加分/罚分的tag，效果有待测试（话说我是不是说过结婚期间不加功能的？hmmm）</li>
-        <li>已经更新到jillhx最新的衣柜数据，加入了黑白天鹅的全部部件，以及签到部件</li>
-        <li>话说大家一定在拼命刷天鹅吧，估计短时间内不会有空去做任务了，这两天我应该不用急着修bug</li>
+        <li>鉴于大家纷纷表示有好多衣服其实是不F的，为了避免错杀一千放过一个的情况，去掉了判断F的机制，请大家理性面对配装器的建议，万一F了考虑一下换连衣裙、外套、上衣以及下装</li>
+        <li>由于6月13的新版本更新了部分衣服的评分，维护衣柜的jill已经哭晕，只能等她检查完1000多件衣服之后才能知道具体的改动</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
