--- a/index.html
+++ b/index.html
@@ -129,14 +129,15 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150613<br/>
-      Update 20150615:<br/>
+      服装数据来自jillhx@贴吧 20150621<br/>
+      Update 20150624:<br/>
       <ul>
-        <li>鉴于大家纷纷表示有好多衣服其实是不F的，为了避免错杀一千放过一个的情况，去掉了判断F的机制，请大家理性面对配装器的建议，万一F了考虑一下换连衣裙、外套、上衣以及下装</li>
-        <li>由于6月13的新版本更新了部分衣服的评分，维护衣柜的jill已经哭晕，只能等她检查完1000多件衣服之后才能知道具体的改动</li>
+        <li>衣柜已经更新到jillhx的20150621版，修正了新版本中变动的一些属性。之后楼中汇报的修正尚未加入。</li>
+        <li>刚蜜月回来，工作繁忙，先更新衣柜，功能稍后再更新，请大家稍安勿躁</li>
       </ul>
+      衣服信息纠错请去<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜楼</a>汇报<br/>
+      功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
-      ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
     </div>
     <hr/>
     <div>
