update wardrobe and fix ui

--- a/index.html
+++ b/index.html
@@ -129,11 +129,14 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150621<br/>
-      Update 20150624:<br/>
+      服装数据来自jillhx@贴吧 20150629<br/>
+      Update 20150630:<br/>
       <ul>
-        <li>衣柜已经更新到jillhx的20150621版，修正了新版本中变动的一些属性。之后楼中汇报的修正尚未加入。</li>
-        <li>刚蜜月回来，工作繁忙，先更新衣柜，功能稍后再更新，请大家稍安勿躁</li>
+        <li>衣柜已经更新到jillhx的20150629版，合计：2040，占比94.5%</li>
+        <li>感谢”各种郁闷的账号“提供的属性信息，已经加入了竞技场的新关卡</li>
+        <li>在flying19880517的提示下修改了子栏目的勾选方式，现在点分类文字也可以勾选类别了</li>
+        <li>添加了全选饰品和袜子的功能</li>
+        <li>在筛选模式下使用id而不是类别来排序了，这样录入饰品应该会快一点</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
