--- a/index.html
+++ b/index.html
@@ -129,16 +129,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150629<br/>
-      Update 20150630:<br/>
+      服装数据来自jillhx@贴吧 20150630<br/>
+      Update 20150701:<br/>
       <ul>
-        <li>衣柜已经更新到jillhx的20150629版，合计：2040，占比94.5%</li>
-        <li>感谢”各种郁闷的账号“提供的属性信息，已经加入了竞技场的新关卡</li>
-        <li>在flying19880517的提示下修改了子栏目的勾选方式，现在点分类文字也可以勾选类别了</li>
-        <li>添加了全选饰品和袜子的功能</li>
-        <li>在筛选模式下使用id而不是类别来排序了，这样录入饰品应该会快一点</li>
+        <li>衣柜已经更新到jillhx的20150630版，共计：2087，占比97%</li>
       </ul>
-      衣服信息纠错请去<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜楼</a>汇报<br/>
+      衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
     </div>
