--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150701<br/>
-      Update 20150704:<br/>
+      服装数据来自jillhx@贴吧 20150707<br/>
+      Update 20150708:<br/>
       <ul>
-        <li>增加了购物篮模式，可以把选中的衣服加入来估算总分以及单项得分。新功能写得急了点可能有很多bug，请多多汇报。</li>
-        <li>自动选择饰品的功能已经被整合入购物篮，由之前的分数排序改成类型排序。</li>
+        <li>衣柜数据更新到了jillhx的20150707版本，共计：2120，占比98.2%</li>
+        <li>购物篮可以手动清空了，你们这群懒人</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
@@ -203,7 +203,7 @@
     </div>
     <hr>
     <div id='shoppingCart'>
-      已选择的衣服 <input type="checkbox" id="accessoriesHelper" checked />自动选择饰品
+      已选择的衣服 <input type="checkbox" id="accessoriesHelper" checked />自动选择饰品 <button onclick="clearShoppingCart()">清空购物车</button>
       <div id='shoppingCartTable'>
       </div>
     </div>
