--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150707<br/>
-      Update 20150708:<br/>
+      服装数据来自jillhx@贴吧 20150712<br/>
+      Update 20150713:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150707版本，共计：2120，占比98.2%</li>
-        <li>购物篮可以手动清空了，你们这群懒人</li>
+        <li>衣柜数据更新到了jillhx的20150712版本，共计：2125，占比98.2%</li>
+        <li>ip君终于突破了7-8，正在欢快地刷支线的时候，游戏维护了。所以只能先把第7章的默认权重发出来，仅供参考</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
