--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150712<br/>
-      Update 20150713:<br/>
+      服装数据来自jillhx@贴吧 20150714<br/>
+      Update 20150718:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150712版本，共计：2125，占比98.2%</li>
-        <li>ip君终于突破了7-8，正在欢快地刷支线的时候，游戏维护了。所以只能先把第7章的默认权重发出来，仅供参考</li>
+        <li>衣柜数据更新到了jillhx的20150714版本，共计：2133，占比99%</li>
       </ul>
+      你们是不是觉得ip君已经消失很久了？其实ip君的确消失很久了，这个礼拜工作上状况不断各种熬夜加班已经被整得满地打滚，其他的更新只能稍后了。
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">友情提示：竞技场新关卡里镜中花水中月套装分数奇高，大家请小心对待不要被坑了</strong><br/>
