--- a/index.html
+++ b/index.html
@@ -134,12 +134,11 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150714<br/>
-      Update 20150719:<br/>
+      Update 20150725:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150714版本，共计：2133，占比99%</li>
-        <li>关卡权重和tag信息更新到了7-支2，ip君好像又被卡住了...</li>
+        <li>添加了仲夏夜之梦的权重及tag，因为测试数据比较少，可能会遗漏高分部件，请多包涵</li>
       </ul>
-      你们是不是觉得ip君已经消失很久了？其实ip君的确消失很久了，这个礼拜工作上状况不断各种熬夜加班已经被整得满地打滚，其他的更新只能稍后了。<br/>
+      jillhx昨天更新了衣柜贴，但是既然她说接下来要日更，ip君就先偷个懒，等今天的更了再更新衣柜吧。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">友情提示：竞技场新关卡里镜中花水中月套装分数奇高，大家请小心对待不要被坑了</strong><br/>
