--- a/index.html
+++ b/index.html
@@ -133,12 +133,13 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150714<br/>
+      服装数据来自jillhx@贴吧 20150725<br/>
       Update 20150725:<br/>
       <ul>
+        <li>衣柜数据更新到了jillhx的20150725版本，共计：2203，占比95%</li>
         <li>添加了仲夏夜之梦的权重及tag，因为测试数据比较少，可能会遗漏高分部件，请多包涵</li>
       </ul>
-      jillhx昨天更新了衣柜贴，但是既然她说接下来要日更，ip君就先偷个懒，等今天的更了再更新衣柜吧。<br/>
+      <strong style="color:red">由于新关卡的开放，目前尚有大量新衣服没有数据，请去<a href="http://tieba.baidu.com/p/3860789814?pid=72233997714#72233997714">这一贴</a>看看有没有可以帮到jill的地方，尽快完善衣柜，让我们少更新几次。</strong><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">友情提示：竞技场新关卡里镜中花水中月套装分数奇高，大家请小心对待不要被坑了</strong><br/>
