--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150726<br/>
-      Update 20150727:<br/>
+      服装数据来自jillhx@贴吧 20150729<br/>
+      Update 20150731:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150726版本，共计：2237，占比96.7%</li>
-        <li>添加了仲夏夜之梦的权重及tag，因为测试数据比较少，可能会遗漏高分部件，请多包涵</li>
+        <li>衣柜数据更新到了jillhx的20150729版本，共计：2252，占比97.4%</li>
+        <li>略微调整了某类tag关卡的计分算法</li>
+        <li>由于墨兰套还没做完，你们暂时别指望第八章的权重表了。为了方便他日测算权重方便，现征集第八章的属性表，有攻略推荐的请在主贴告知，拜谢！</li>
       </ul>
       <strong style="color:red">由于新关卡的开放，目前尚有大量新衣服没有数据，请去<a href="http://tieba.baidu.com/p/3860789814?pid=72304636572#72304636572">这一贴</a>看看有没有可以帮到jill的地方，尽快完善衣柜，让我们少更新几次。</strong><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
