update level info

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
       <ul>
         <li>衣柜数据更新到了jillhx的20150729版本，共计：2252，占比97.4%</li>
         <li>略微调整了某类tag关卡的计分算法</li>
+        <li>略微调整了第七章某些关卡的权重和tag算法</li>
+        <li>修复了一个自动推荐饰品的bug</li>
         <li>由于墨兰套还没做完，你们暂时别指望第八章的权重表了。为了方便他日测算权重方便，现征集第八章的属性表，有攻略推荐的请在主贴告知，拜谢！</li>
       </ul>
       <strong style="color:red">由于新关卡的开放，目前尚有大量新衣服没有数据，请去<a href="http://tieba.baidu.com/p/3860789814?pid=72304636572#72304636572">这一贴</a>看看有没有可以帮到jill的地方，尽快完善衣柜，让我们少更新几次。</strong><br/>
