--- a/index.html
+++ b/index.html
@@ -134,13 +134,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150729<br/>
-      Update 20150731:<br/>
+      服装数据来自jillhx@贴吧 20150731<br/>
+      Update 20150801:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150729版本，共计：2252，占比97.4%</li>
-        <li>略微调整了某类tag关卡的计分算法</li>
-        <li>略微调整了第七章某些关卡的权重和tag算法</li>
-        <li>修复了一个自动推荐饰品的bug</li>
+        <li>衣柜数据更新到了jillhx的20150731版本，共计：2264，占比98%，求求你们赶紧把衣服收集齐吧天天更我受不了了</li>
+        <li>第七章的关卡权重修正到7-7，第八章还卡在衣服上</li>
         <li>加了一个小功能，还没好好测试过，如果上线以后发现不好用我就删掉整个功能以及这句话，就好像什么都没发生过一样。</li>
       </ul>
       <strong style="color:red">由于新关卡的开放，目前尚有大量新衣服没有数据，请去<a href="http://tieba.baidu.com/p/3860789814?pid=72304636572#72304636572">这一贴</a>看看有没有可以帮到jill的地方，尽快完善衣柜，让我们少更新几次。</strong><br/>
