update levels and fixed column

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       padding: 10px 8px;
       border-bottom: 2px solid #6678b1;
     }
+    th.score {
+      width: 55px;
+    }
+    th.name {
+      width: 100px;
+    }
+    th.category {
+      width: 110px;
+    }
     td
     {
       color: #669;
