--- a/index.html
+++ b/index.html
@@ -146,11 +146,10 @@
       服装数据来自jillhx@贴吧 20150731<br/>
       Update 20150801:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150731版本，共计：2264，占比98%，求求你们赶紧把衣服收集齐吧天天更我受不了了</li>
-        <li>第七章的关卡权重修正到7-7，第八章还卡在衣服上</li>
+        <li>衣柜数据更新到了jillhx的20150731版本，共计：2264，占比98%</li>
+        <li>修正了6-支1到6-支3以及7-1到7-9的权重和tag</li>
         <li>加了一个小功能，还没好好测试过，如果上线以后发现不好用我就删掉整个功能以及这句话，就好像什么都没发生过一样。</li>
       </ul>
-      <strong style="color:red">由于新关卡的开放，目前尚有大量新衣服没有数据，请去<a href="http://tieba.baidu.com/p/3860789814?pid=72304636572#72304636572">这一贴</a>看看有没有可以帮到jill的地方，尽快完善衣柜，让我们少更新几次。</strong><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong style="color:red">友情提示：竞技场新关卡里镜中花水中月套装分数奇高，大家请小心对待不要被坑了</strong><br/>
