--- a/index.html
+++ b/index.html
@@ -146,11 +146,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150809<br/>
-      Update 20150813:<br/>
+      服装数据来自jillhx@贴吧 20150817<br/>
+      Update 20150818:<br/>
       <ul>
-        <li>考虑到兼容性的问题，提供了关闭浮动栏的功能</li>
-        <li>在浮动栏还浮动的时候，可以回到顶部了</li>
+        <li>衣柜数据更新到了jillhx的20150817版本，共计：2331，占比95.5%</li>
+        <li>修正了5-10的权重</li>
+        <li>增加了云端七夕庙会的权重，然并卵，明天兴许就改题目了呢</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
