--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       padding: 4px 4px 4px 4px;
     }
     table.mainTable td.own.deps .button {
-      background-color: #fee;
+      background-color: #fdd;
     }
     table.mainTable td.own .button
     {
@@ -77,7 +77,7 @@
       background-position: 5px 8px;
       background-repeat: no-repeat;
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAU0lEQVR42mNgoAHgZ2FjO8/MxjafaMUs7Oz/QZiQJhTFYAzkg2VAOqEcfgKK+SGKUQXlcSoGAQxJdIxqMw7r8ShmIOhmokKFCMVwTdCw5qdatAMAai8zEfxslWsAAAAASUVORK5CYII=);
-      background-color: #efe;
+      background-color: #dfd;
     }
     .button {
       position: relative;
@@ -187,14 +187,14 @@
       z-index: 255;
       white-space: pre;
       text-align: left;
-      background-color: #cfc;
+      background-color: #bfb;
     }
     [tooltip]:hover:after {
       opacity : 1;
       padding: 10px;
     }
     td.deps [tooltip]:after {
-      background-color: #fcc;
+      background-color: #fbb;
     }
   </style>
     
@@ -203,14 +203,12 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150818<br/>
-      设计图数据来自amy_翡翠@贴吧 20150817<br/>
-      Update 20150819:<br/>
+      设计图数据来自amy_翡翠@贴吧 20150820<br/>
+      Update 20150821:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150818版本，共计：2359，占比96.6%</li>
-        <li>设计图数据使用了amy_翡翠的20150817版本（抱大腿拿到的特供版）</li>
-        <li>现在可以看到每件衣服的心级了</li>
-        <li>已经获得的物品会根据是否已经完成所有的进化/定制/制作显示不同的颜色。绿色表示已经全部完成，红色表示尚未完成。
-            桌面用户可以把鼠标浮在名字上看到底缺了啥，由于数据可能不全，请小心使用。</li>
+        <li>设计图数据使用了amy_翡翠的20150820版本</li>
+        <li>微调了界面</li>
+        <li>增加了联盟的部分委托，其中只有保育员面试的权重已经测完了</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
