--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <li>设计图数据使用了amy_翡翠的20150820版本</li>
         <li>微调了界面</li>
         <li>增加了联盟的部分委托，其中只有保育员面试的权重已经测完了</li>
-        <li>应广大群众的要求，连夜添加了tag，怀疑有tag的时候可以尝试加分B*1试试。大半夜的我这是要干嘛啊啊啊啊，所以可能会有很多bug请多包涵</li>
+        <li>修正了tag不能用的bug</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
