--- a/index.html
+++ b/index.html
@@ -204,10 +204,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150910<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20150907:<br/>
+      Update 20150916:<br/>
       <ul>
-        <li>衣柜数据已经更新到jillhx 20150910版，共计：2538，占比94%</li>
-        <li>关卡测到9-8，感谢流水喵提供的tag信息。</li>
+        <li>第九章权重测量完毕，感谢流水喵的帮助。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
