--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150916<br/>
+      服装数据来自jillhx@贴吧 20150924<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20150917:<br/>
+      Update 20150923:<br/>
       <ul>
-        <li>衣柜信息已经更新到了jillhx的20150916版，共计：2538，占比94%</li>
-        <li>略微修改了每一档的估分，主要是提高了SS的分值而降低了C的分值。上一次测量分数的时候衣服还很少，没有足够的样本。</li>
+        <li>衣柜信息已经更新到了jillhx的20150924版，共计：2566，占比95%</li>
+        <li>补上了竞技场和联盟缺失的任务，调整了一部分的权重，如果有错误请以流水喵和玉人的攻略版本为准</li>
       </ul>
+      国庆将会出游三周，期间更新暂缓，但愿不要有太大动静的更新，不然。。。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
