--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150924<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20150923:<br/>
+      Update 20150927:<br/>
       <ul>
-        <li>衣柜信息已经更新到了jillhx的20150924版，共计：2566，占比95%</li>
-        <li>补上了竞技场和联盟缺失的任务，调整了一部分的权重，如果有错误请以流水喵和玉人的攻略版本为准</li>
+        <li>最后一更，修正了部分bug，应该已经可以在一部分手机上使用了</li>
       </ul>
       国庆将会出游三周，期间更新暂缓，但愿不要有太大动静的更新，不然。。。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
