--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150924<br/>
+      服装数据来自jillhx@贴吧 20150930<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20150927:<br/>
+      Update 20151002:<br/>
       <ul>
-        <li>最后一更，修正了部分bug，应该已经可以在一部分手机上使用了</li>
+        <li>衣柜数据更新到了jillhx的20150930版，共计：2637，占比94%</li>
       </ul>
       国庆将会出游三周，期间更新暂缓，但愿不要有太大动静的更新，不然。。。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
