--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150930<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20151002:<br/>
+      Update 20151016:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20150930版，共计：2637，占比94%</li>
+        <li>偷偷更新了第十章前三关的权重，仍然在出游中</li>
       </ul>
       国庆将会出游三周，期间更新暂缓，但愿不要有太大动静的更新，不然。。。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
