--- a/index.html
+++ b/index.html
@@ -182,14 +182,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20151016<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-      Update 20151017:<br/>
+      Update 20151020:<br/>
       <ul>
-        <li>偷偷更新了衣柜数据库，由于jillhx还没有公开宣布，可能尚有需要修正的地方</li>
-        <li>注意设计图数据还是1.4.5的，新的图样还没有被加进去，分解衣服的时候请小心。新版本下已经没有浅慵红马甲等的福利了，在有新的情报前可以考虑撕商店货。</li>
-        <li>偷偷继续更新了第十章的权重，现在在努力做衣服</li>
-        <li>还没有回来，不过快了。。。</li>
+        <li>继续更新了第十章的权重</li>
+        <li>更新了月下舞会的权重，高分区域导致F的衣服比较多，请合理利用中途退出不扣次数的特性进行尝试</li>
       </ul>
-      国庆将会出游三周，期间更新暂缓，但愿不要有太大动静的更新，不然。。。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
