--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151016<br/>
-      设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
+      服装数据来自jillhx@贴吧 20151020<br/>
+      设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151020:<br/>
       <ul>
-        <li>继续更新了第十章的权重</li>
-        <li>更新了月下舞会的权重，高分区域导致F的衣服比较多，请合理利用中途退出不扣次数的特性进行尝试</li>
+        <li>衣柜数据更新到了jillhx的1.5.2版本，共计：2824，占比95%</li>
+        <li>设计图数据更新到了amy_翡翠的1.5.2版本</li>
+        <li>第十章关卡更新完毕</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
