--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         <li>设计图数据更新到了amy_翡翠的1.5.2版本</li>
         <li>第十章关卡更新完毕</li>
       </ul>
+      拿不到第一怪流水和玉人有毛用，连我都没拿到过公主第一……<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
