--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='wardrobe_real.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='model.js'></script>
@@ -182,9 +183,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20151106<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151106:<br/>
+      Update 20151125:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20151106版本，昼夜回廊更新完毕</li>
+        <li>更新了部分联盟关卡的权重，未来会根据我们联盟的战术及进度更新。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
