--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151106<br/>
+      服装数据来自jillhx@贴吧 20151125<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151125:<br/>
       <ul>
         <li>更新了部分联盟关卡的权重，未来会根据我们联盟的战术及进度更新。</li>
+        <li>衣柜数据更新到了jillhx的20151125版本，共计3048，占比97%</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
