--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151126:<br/>
       <ul>
-        <li>我们联盟的进展比我想象中快嘛，更新到2-3了。</li>
+        <li>联盟更新到2-5。</li>
         <li>衣柜数据更新到了jillhx的20151125版本，共计3048，占比97%</li>
       </ul>
+      今天我很惶恐。其实我才应该感谢大家，我站在了巨人们的肩膀上，依靠每一个人的奉献和鼓励才能走到今天这一步。每一个能看到这句话的人，请接受我的谢意。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
