--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151126:<br/>
       <ul>
-        <li>联盟更新到2-5。</li>
+        <li>联盟更新完毕。</li>
         <li>衣柜数据更新到了jillhx的20151125版本，共计3048，占比97%</li>
       </ul>
       今天我很惶恐。其实我才应该感谢大家，我站在了巨人们的肩膀上，依靠每一个人的奉献和鼓励才能走到今天这一步。每一个能看到这句话的人，请接受我的谢意。<br/>
