--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151125<br/>
+      服装数据来自jillhx@贴吧 20151127<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151126:<br/>
+      Update 20151128:<br/>
       <ul>
         <li>联盟更新完毕。</li>
-        <li>衣柜数据更新到了jillhx的20151125版本，共计3048，占比97%</li>
+        <li>衣柜数据更新到了jillhx的20151127版本，共计多少来着。。。</li>
       </ul>
       今天我很惶恐。其实我才应该感谢大家，我站在了巨人们的肩膀上，依靠每一个人的奉献和鼓励才能走到今天这一步。每一个能看到这句话的人，请接受我的谢意。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
