--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='wardrobe_real.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='model.js'></script>
@@ -183,11 +182,10 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20151203<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151203:<br/>
+      Update 20151207:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20151203版本，修正了若干错误。</li>
+        <li>谁说时差党没好处，起码不用早起就可以第一时间测定权重嘛...满天繁星权重已更</li>
       </ul>
-      今天我很惶恐。其实我才应该感谢大家，我站在了巨人们的肩膀上，依靠每一个人的奉献和鼓励才能走到今天这一步。每一个能看到这句话的人，请接受我的谢意。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
