--- a/index.html
+++ b/index.html
@@ -180,11 +180,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151203<br/>
+      服装数据来自jillhx@贴吧 20151208<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151207:<br/>
+      Update 20151208:<br/>
       <ul>
         <li>谁说时差党没好处，起码不用早起就可以第一时间测定权重嘛...满天繁星权重已更</li>
+        <li>衣柜数据已经更新到jillhx的20151208版，满天繁星已经加入，并且调整了两类特殊饰品的描述</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
