--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151209:<br/>
       <ul>
-        <li>满天繁星权重已更新到第二天</li>
+        <li>满天繁星权重已更新到第二天: 射手座少女</li>
         <li>衣柜数据已经更新到jillhx的20151208版，满天繁星已经加入，并且调整了两类特殊饰品的描述</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
