--- a/index.html
+++ b/index.html
@@ -180,12 +180,14 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151208<br/>
+      服装数据来自jillhx@贴吧 20151209<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151209:<br/>
       <ul>
         <li>满天繁星权重已更新到第二天: 射手座少女</li>
-        <li>衣柜数据已经更新到jillhx的20151208版，满天繁星已经加入，并且调整了两类特殊饰品的描述</li>
+        <li>衣柜数据已经更新到jillhx的20151209版，修正了若干之前的错误</li>
+        <li>说明一下，栩栩把狐狸耳朵标为头部，我不同意，一方面是标为耳朵比较贴切，另一方面目前这一类别也只有狐狸耳朵一样，大不了以后有新的再改呗。
+          就好像我也不信翅膀那一栏以后不会加些别的插在背上的东西，比如说披风啊、旗帜啊、精忠报国啊。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
