--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20151209<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151209:<br/>
+      Update 20151210:<br/>
       <ul>
-        <li>满天繁星权重已更新到第二天: 射手座少女</li>
+        <li>满天繁星权重已更新到第三天: 玄武女土蝠</li>
         <li>衣柜数据已经更新到jillhx的20151209版，修正了若干之前的错误</li>
         <li>说明一下，栩栩把狐狸耳朵标为头部，我不同意，一方面是标为耳朵比较贴切，另一方面目前这一类别也只有狐狸耳朵一样，大不了以后有新的再改呗。
           就好像我也不信翅膀那一栏以后不会加些别的插在背上的东西，比如说披风啊、旗帜啊、精忠报国啊。。。</li>
