--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20151210:<br/>
       <ul>
-        <li>满天繁星权重已更新到第四天: 喝茶听课</li>
+        <li>满天繁星权重已更新到第五天: 星宿侠女，三万英尺高的地方更新配装器我也是满拼的。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
