--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151209<br/>
+      服装数据来自jillhx@贴吧 20151218<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151214:<br/>
+      Update 20151219:<br/>
       <ul>
-        <li>满天繁星权重已更新完毕</li>
+        <li>衣柜数据已经更新到jillhx20151218版，加入了罂粟千狐套装。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
