--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>奇迹暖暖在线配装器</title>
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='jquery.collapse.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
@@ -11,180 +12,225 @@
     <script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
     <script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
     <style>
-    table
-    {
-      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-      font-size: 12px;
-      background: #fff;
-      margin: 10px 20px;
-      border-collapse: collapse;
-      text-align: center;
-      table-layout: fixed;
-    }
-    th
-    {
-      font-size: 14px;
-      font-weight: normal;
-      color: #039;
-      padding: 10px 8px;
-      border-bottom: 2px solid #6678b1;
-    }
-    th.score {
-      width: 55px;
-    }
-    th.name {
-      width: 100px;
-    }
-    th.category {
-      width: 110px;
-    }
-    th.top {
-      width: 75px;
-    }
-    td
-    {
-      color: #669;
-      padding: 4px 4px 4px 4px;
-    }
-    table.mainTable td.own.deps .button {
-      background-color: #fdd;
-    }
-    table.mainTable td.own .button
-    {
-      padding-left:20px;
-      background-position: 5px 8px;
-      background-repeat: no-repeat;
-      background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAU0lEQVR42mNgoAHgZ2FjO8/MxjafaMUs7Oz/QZiQJhTFYAzkg2VAOqEcfgKK+SGKUQXlcSoGAQxJdIxqMw7r8ShmIOhmokKFCMVwTdCw5qdatAMAai8zEfxslWsAAAAASUVORK5CYII=);
-      background-color: #dfd;
-    }
-    .button {
-      position: relative;
-      overflow: visible;
-      display: inline-block;
-      padding: 0.5em 1em;
-      border: 1px solid #d4d4d4;
-      margin: 0;
-      text-decoration: none;
-      text-align: center;
-      text-shadow: 1px 1px 0 #fff;
-      color: #333;
-      white-space: nowrap;
-      cursor: pointer;
-      outline: none;
-      background-color: #ececec;
-      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f4f4f4), to(#ececec));
-      background-image: -moz-linear-gradient(#f4f4f4, #ececec);
-      background-image: -ms-linear-gradient(#f4f4f4, #ececec);
-      background-image: -o-linear-gradient(#f4f4f4, #ececec);
-      background-image: linear-gradient(#f4f4f4, #ececec);
-      -moz-background-clip: padding; /* for Firefox 3.6 */
-      background-clip: padding-box;
-      border-radius: 0.2em;
-      /* IE hacks */
-      zoom: 1;
-      *display: inline;
-    }
-    tbody tr:hover td
-    {
-      color: #009;
-      background: #eee;
-    }
-    td.S {
-      color: #FB3;
-    }
-    td.A {
-      color: #F0A;
-    }
-    td.B {
-      color: #A66;
-    }
-    td.C {
-      color: #38F;
-    }
-    td.negative {
-      text-decoration: line-through;
-    }
-    div.facet {
-      margin-left:10px;
-    }
-    div.announcement {
-      max-width: 800px;
-    }
-    div.weightContainer {
-      display: inline-block;
-    }
-    ul.tabs {
-    	margin: 0;
-    	padding: 0;
-    	list-style: none;
-    	height: 32px;
-    	border-bottom: 1px solid #999;
-    	border-left: 1px solid #999;
-    	width: 100%;
-    }
-    ul.tabs li {
-    	float: left;
-    	margin: 0;
-    	padding: 0;
-    	height: 31px;
-    	line-height: 31px;
-    	border: 1px solid #999;
-    	border-left: none;
-    	margin-bottom: -1px;
-    	background: #F0F0F0;
-    	overflow: hidden;
-    	position: relative;
-    }
-    ul.tabs li a {
-    	text-decoration: none;
-    	color: #000;
-    	display: block;
-    	font-size: 1.2em;
-    	padding: 0 10px;
-    	border: 1px solid #fff;
-    	outline: none;
-    }
-    ul.tabs li a:hover {
-    	background: #ccc;
-    }	
-    html ul.tabs li.active, html ul.tabs li.active a:hover  {
-    	background: #fff;
-    	border-bottom: 1px solid #fff;
-    }
-    #category_container div {
-    	display:none;
-    }
-    #category_container div.active {
-    	display:block;
-    }
-    [tooltip]:after {
-      margin-left: 5px;
-      position : absolute;
-      content : attr(tooltip);
-      opacity : 0;
-      z-index: 255;
-      white-space: pre;
-      text-align: left;
-      background-color: #bfb;
-    }
-    [tooltip]:hover:after {
-      opacity : 1;
-      padding: 10px;
-    }
-    td.deps [tooltip]:after {
-      background-color: #fbb;
-    }
-  </style>
-    
+      table
+      {
+        font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+        font-size: 12px;
+        background: #fff;
+        margin: 10px 20px;
+        border-collapse: collapse;
+        text-align: center;
+        table-layout: fixed;
+      }
+      th
+      {
+        font-size: 14px;
+        font-weight: normal;
+        color: #039;
+        padding: 10px 8px;
+        border-bottom: 2px solid #6678b1;
+      }
+      th.score {
+        width: 55px;
+      }
+      th.name {
+        width: 100px;
+      }
+      th.category {
+        width: 110px;
+      }
+      th.top {
+        width: 75px;
+      }
+      td
+      {
+        color: #669;
+        padding: 4px 4px 4px 4px;
+      }
+      table.mainTable td.own.deps .button {
+        background-color: #fdd;
+      }
+      table.mainTable td.own .button
+      {
+        padding-left:20px;
+        background-position: 5px 8px;
+        background-repeat: no-repeat;
+        background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAU0lEQVR42mNgoAHgZ2FjO8/MxjafaMUs7Oz/QZiQJhTFYAzkg2VAOqEcfgKK+SGKUQXlcSoGAQxJdIxqMw7r8ShmIOhmokKFCMVwTdCw5qdatAMAai8zEfxslWsAAAAASUVORK5CYII=);
+        background-color: #dfd;
+      }
+      .button {
+        position: relative;
+        overflow: visible;
+        display: inline-block;
+        padding: 0.5em 1em;
+        border: 1px solid #d4d4d4;
+        margin: 0;
+        text-decoration: none;
+        text-align: center;
+        text-shadow: 1px 1px 0 #fff;
+        color: #333;
+        white-space: nowrap;
+        cursor: pointer;
+        outline: none;
+        background-color: #ececec;
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f4f4f4), to(#ececec));
+        background-image: -moz-linear-gradient(#f4f4f4, #ececec);
+        background-image: -ms-linear-gradient(#f4f4f4, #ececec);
+        background-image: -o-linear-gradient(#f4f4f4, #ececec);
+        background-image: linear-gradient(#f4f4f4, #ececec);
+        -moz-background-clip: padding; /* for Firefox 3.6 */
+        background-clip: padding-box;
+        border-radius: 0.2em;
+        /* IE hacks */
+        zoom: 1;
+        *display: inline;
+      }
+      tbody tr:hover td
+      {
+        color: #009;
+        background: #eee;
+      }
+      td.S {
+        color: #FB3;
+      }
+      td.A {
+        color: #F0A;
+      }
+      td.B {
+        color: #A66;
+      }
+      td.C {
+        color: #38F;
+      }
+      td.negative {
+        text-decoration: line-through;
+      }
+      div.facet {
+        margin-left:10px;
+      }
+      div.announcement {
+        max-width: 800px;
+      }
+      div.weightContainer {
+        display: inline-block;
+      }
+      ul.tabs {
+      	margin: 0;
+      	padding: 0;
+      	list-style: none;
+      	height: 32px;
+      	border-bottom: 1px solid #999;
+      	border-left: 1px solid #999;
+      	width: 100%;
+      }
+      ul.tabs li {
+      	float: left;
+      	margin: 0;
+      	padding: 0;
+      	height: 31px;
+      	line-height: 31px;
+      	border: 1px solid #999;
+      	border-left: none;
+      	margin-bottom: -1px;
+      	background: #F0F0F0;
+      	overflow: hidden;
+      	position: relative;
+      }
+      ul.tabs li a {
+      	text-decoration: none;
+      	color: #000;
+      	display: block;
+      	font-size: 1.2em;
+      	padding: 0 10px;
+      	border: 1px solid #fff;
+      	outline: none;
+      }
+      ul.tabs li a:hover {
+      	background: #ccc;
+      }	
+      html ul.tabs li.active, html ul.tabs li.active a:hover  {
+      	background: #fff;
+      	border-bottom: 1px solid #fff;
+      }
+      #category_container div {
+      	display:none;
+      }
+      #category_container div.active {
+      	display:block;
+      }
+      [tooltip]:after {
+        margin-left: 5px;
+        position : absolute;
+        content : attr(tooltip);
+        opacity : 0;
+        z-index: 255;
+        white-space: pre;
+        text-align: left;
+        background-color: #bfb;
+      }
+      [tooltip]:hover:after {
+        opacity : 1;
+        padding: 10px;
+      }
+      td.deps [tooltip]:after {
+        background-color: #fbb;
+      }
+      .panel {
+        width: 50em;
+      }
+      .panel h3 {
+        margin: 0px;
+        padding: 0px;
+        font-size: 0.85em;
+      }
+      .panel h3 a {
+        display: block;
+        background: #668bb1;
+        color:#fff;
+        padding:10px;
+        text-decoration:none;
+        position: relative;
+      }
+      .panel h3 a:after {
+        content: '+';
+        position: absolute;
+        right: 20px;
+      }
+      .panel h3.open a { 
+        background: #c4ced5; 
+        color:inherit;
+      }
+      .panel h3.open a:after {
+        content: '-';
+      }
+      span.more {
+        cursor: pointer;
+      }
+      table.ranking {
+        width: 100%;
+        text-align:left;
+        font-size: 0.9em;
+      }
+      table.ranking span {
+        display: inline-block;
+      }
+      table.ranking td.category {
+        width: 7em;
+        vertical-align: top;
+      }
+      .red {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20151223<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151223:<br/>
+      Update 20151227:<br/>
       <ul>
-        <li>衣柜数据更新到了jillhx的20151223版</li>
+        <li>修改了一些业务逻辑，详见<a href="http://tieba.baidu.com/p/4236753793">这贴</a></li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
@@ -283,6 +329,11 @@
       </form>
     </div>
     <hr>
+    <div id="summary" class="panel">
+      <h3>for 玉人</h3>
+      <div id="ranking">
+      </div>
+    </div>
     <div id='shoppingCartContainer'>
       已选择的衣服 <input type="checkbox" id="accessoriesHelper" checked />自动选择饰品 <button onclick="clearShoppingCart()">清空购物车</button>
       <div id='shoppingCart'>
