--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.collapse.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='jquery.auto-complete.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='model.js'></script>
     <script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
     <script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
+    <link rel="stylesheet" href="jquery.auto-complete.css">
     <style>
       table
       {
@@ -221,6 +223,9 @@
       .red {
         color: red;
       }
+      input.suggest {
+        width: 30em;
+      }
     </style>
   </head>
   <body>
@@ -241,8 +246,8 @@
     <div id='filtersTop'>
       <form name="filter_form">
         <div>
-          <input type="radio" name="mode" value="filtering" onClick="changeMode(true)" checked/> 筛选
-          <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" /> 计分
+          <input type="radio" name="mode" value="filtering" onClick="changeMode(true)" /> 筛选
+          <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" checked/> 计分
           <select id="theme" onChange="changeTheme()" style="display: none"></select>
           <span id="tagInfo"></span>
         </div>
@@ -336,6 +341,7 @@
     </div>
     <div id='shoppingCartContainer'>
       已选择的衣服 <input type="checkbox" id="accessoriesHelper" checked />自动选择饰品 <button onclick="clearShoppingCart()">清空购物车</button>
+      <input type="textbox" id="searchitem" placeholder="输入衣服名称或编号" class='suggest'/>
       <div id='shoppingCart'>
       </div>
     </div>
