--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         height: 1.5em;
         border-radius: 3px;
         border: 1px solid #CCC;
-        padding: 8px;
+        padding-left: 8px;
         margin: 1px;
         font-weight: 200;
         font-size: 1em;
