--- a/index.html
+++ b/index.html
@@ -265,12 +265,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20151223<br/>
+      服装数据来自jillhx@贴吧 20160101<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20151229:<br/>
+      Update 20160101:<br/>
       <ul>
-        <li>思考再三，为了元旦二选一活动还是增加了搜索功能，你们这群不肯用ctrl+f的懒人！</li>
-        <li>思考再三，把默认选项切到计分模式了，估计筛选除了我就没人用了吧。。。</li>
+        <li>衣柜数据更新到jillhx的20160101版</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
