--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
       <ul>
         <li>衣柜数据更新到jillhx的20160101版</li>
       </ul>
+      那些看了玉人微博觉得我很萌的人，你们醒醒好么，我什么时候骂过别人蠢蛋，要不是我看到的时候已经晚了，早就抽她了。。。<br/>
+      还有，我就窥屏了咋滴。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
