--- a/index.html
+++ b/index.html
@@ -265,14 +265,13 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20160101<br/>
+      服装数据来自jillhx@贴吧 20160108<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20160101:<br/>
+      Update 20160108:<br/>
       <ul>
-        <li>衣柜数据更新到jillhx的20160101版</li>
+        <li>衣柜数据更新到jillhx的20160108版</li>
+        <li>关卡缓慢更新中，原因你们懂的...我泪奔去了。11关应该有很多现成攻略可以参考，比如<a href="http://photo.weibo.com/5662509221/wbphotos/large/mid/3928959080914913/pid/006bdjjTgw1ezrvrea2ndj30hs0vmgos" target="_blank">这篇</a></li>
       </ul>
-      那些看了玉人微博觉得我很萌的人，你们醒醒好么，我什么时候骂过别人蠢蛋，要不是我看到的时候已经晚了，早就抽她了。。。<br/>
-      还有，我就窥屏了咋滴。<br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
