--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       Update 20160108:<br/>
       <ul>
         <li>衣柜数据更新到jillhx的20160108版</li>
-        <li>关卡缓慢更新中，原因你们懂的...我泪奔去了。11关应该有很多现成攻略可以参考，比如<a href="http://photo.weibo.com/5662509221/wbphotos/large/mid/3928959080914913/pid/006bdjjTgw1ezrvrea2ndj30hs0vmgos" target="_blank">这篇</a></li>
+        <li>关卡更新到11-9。11关应该有很多现成攻略可以参考，比如<a href="http://photo.weibo.com/5662509221/wbphotos/large/mid/3928959080914913/pid/006bdjjTgw1ezrvrea2ndj30hs0vmgos" target="_blank">这篇</a></li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
