--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20160108:<br/>
       <ul>
-        <li>衣柜数据更新到jillhx的20160108版</li>
-        <li>关卡更新到11-9。11关应该有很多现成攻略可以参考，比如<a href="http://photo.weibo.com/5662509221/wbphotos/large/mid/3928959080914913/pid/006bdjjTgw1ezrvrea2ndj30hs0vmgos" target="_blank">这篇</a></li>
+        <li>关卡更新完毕，遇到F先脱外套再看关卡有没有特殊要求最后换身衣服看看。</li>
+        <li>玉人你给我出来！名花有主是什么意思！我跟花有半毛钱关系！！要不是看你已经病得不能说话早收拾你了。。。</li>
+        <li style="color:white">别同情得太早，我觉得她打字熬夜可一点都没受到影响。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
