--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.collapse.js'></script>
     <script type='text/javascript' charset="UTF-8" src='jquery.auto-complete.min.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='../nikkistats/wardrobe.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='../nikkistats/scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='model.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='../nikkistats/model.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='../nikkistats/pattern.js'></script>
     <script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
     <link rel="stylesheet" href="jquery.auto-complete.css">
     <style>
