--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
       .red {
         color: red;
       }
+      .blue {
+        color: blue;
+      }
       select
       {
         width: 200px;
@@ -265,13 +268,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20160108<br/>
+      服装数据来自jillhx@贴吧 20160109<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
       Update 20160110:<br/>
       <ul>
-        <li>关卡更新完毕，遇到F先脱外套再看关卡有没有特殊要求最后换身衣服看看。</li>
-        <li>玉人你给我出来！名花有主是什么意思！我跟花有半毛钱关系！！要不是看你已经病得不能说话早收拾你了。。。</li>
-        <li style="color:white">别同情得太早，我觉得她打字熬夜可一点都没受到影响。</li>
+        <li>细微的改进。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
