--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.auto-complete.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/scoring.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='blacklist.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/model.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/pattern.js'></script>
